<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/context_type_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_name_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/recurring_type_buttons">

        <RadioButton
            android:id="@+id/button_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Home"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_home"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/button_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Work"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_work"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/button_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/School"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_school"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/button_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Errand"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_errands"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/recurring_type_buttons"
        android:layout_width="333dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/context_type_buttons">

        <RadioButton
            android:id="@+id/one_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/one_time" />

        <RadioButton
            android:id="@+id/daily_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/weekly_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/weekly_on_weekday" />

        <RadioButton
            android:id="@+id/monthly_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/monthly_on" />

        <RadioButton
            android:id="@+id/yearly_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/yearly_on" />
    </RadioGroup>

    <EditText
        android:id="@+id/goal_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/write_your_goal_here"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />
</androidx.constraintlayout.widget.ConstraintLayout>
