<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Hamburger (Navigation drawer toggle) -->
    <item
        android:id="@+id/action_hamburger"
        android:icon="@drawable/baseline_dehaze_24"
    android:title="@string/navigation_drawer_open"
    app:showAsAction="always"
    app:iconTint="@color/white" />

    <item
        android:id="@+id/action_bar_add_button"
        android:icon="@drawable/add_button"
        android:title="@string/add_button"
        app:showAsAction="always"
        app:iconTint="@color/white" />

    <item
        android:id="@+id/action_arrow_drop_down_button"
        android:icon="@drawable/arrow_drop_down"
        android:title="@string/arrow_drop_down"
        app:showAsAction="always"
        app:iconTint="@color/white" />
</menu>
