<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/button_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Home"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_home"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/button_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Work"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_work"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/button_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/School"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_school"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/button_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/Errand"
            android:button="@android:color/transparent"
            android:background="@drawable/shape_errands"
            android:textColor="@drawable/text_color"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:gravity="center"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
